--- a/gaji karyawan/unit1.lfm
+++ b/gaji karyawan/unit1.lfm
@@ -6,7 +6,6 @@ object Form1: TForm1
   Caption = 'PT. Nusa Indah'
   ClientHeight = 391
   ClientWidth = 453
-  LCLVersion = '3.0.0.1'
   object edtNama: TEdit
     Left = 184
     Height = 23
@@ -20,6 +19,7 @@ object Form1: TForm1
     Top = 56
     Width = 79
     Caption = 'Nama pegawai'
+    ParentColor = False
   end
   object Label2: TLabel
     Left = 72
@@ -27,6 +27,7 @@ object Form1: TForm1
     Top = 88
     Width = 40
     Caption = 'Jabatan'
+    ParentColor = False
   end
   object cbJabatan: TComboBox
     Left = 184
@@ -54,6 +55,7 @@ object Form1: TForm1
     Top = 123
     Width = 59
     Caption = 'Gaji  pokok'
+    ParentColor = False
   end
   object Label4: TLabel
     Left = 72
@@ -61,6 +63,7 @@ object Form1: TForm1
     Top = 240
     Width = 91
     Caption = 'Status Tunjangan'
+    ParentColor = False
   end
   object edtTunjangan: TEdit
     Left = 184
@@ -69,7 +72,9 @@ object Form1: TForm1
     Width = 193
     BidiMode = bdRightToLeft
     ParentBidiMode = False
+    ParentShowHint = False
     TabOrder = 3
+    Text = 'ppp'
   end
   object btnHitung: TButton
     Left = 72
@@ -77,7 +82,9 @@ object Form1: TForm1
     Top = 272
     Width = 307
     Caption = 'Total Gaji'
+    Font.Style = [fsBold]
     OnClick = btnHitungClick
+    ParentFont = False
     TabOrder = 4
   end
   object edtTotalGaji: TEdit
@@ -94,6 +101,7 @@ object Form1: TForm1
     Top = 312
     Width = 55
     Caption = 'Gaji Bersih'
+    ParentColor = False
   end
   object Button2: TButton
     Left = 72
@@ -101,6 +109,8 @@ object Form1: TForm1
     Top = 352
     Width = 144
     Caption = 'Isi data lagi'
+    Font.Style = [fsBold]
+    ParentFont = False
     TabOrder = 6
   end
   object Button3: TButton
@@ -109,6 +119,8 @@ object Form1: TForm1
     Top = 352
     Width = 144
     Caption = 'Close'
+    Font.Style = [fsBold]
+    ParentFont = False
     TabOrder = 7
   end
   object rgStatus: TRadioGroup
@@ -125,9 +137,10 @@ object Form1: TForm1
     ChildSizing.ShrinkHorizontal = crsScaleChilds
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
-    ChildSizing.ControlsPerLine = 1
+    ChildSizing.ControlsPerLine = 3
     ClientHeight = 38
     ClientWidth = 222
+    Columns = 3
     Items.Strings = (
       'Tetap'
       'Honorer'
