--- a/penjualan barang/lib/x86_64-win64/unit1.lfm
+++ b/penjualan barang/lib/x86_64-win64/unit1.lfm
@@ -3,10 +3,10 @@ object Form1: TForm1
   Height = 379
   Top = 134
   Width = 456
-  Caption = 'Form1'
+  Caption = 'Perhitungan Barang'
   ClientHeight = 379
   ClientWidth = 456
-  LCLVersion = '3.0.0.1'
+  LCLVersion = '2.2.6.0'
   object Label1: TLabel
     Left = 32
     Height = 37
@@ -18,6 +18,7 @@ object Form1: TForm1
     Font.Pitch = fpVariable
     Font.Quality = fqDraft
     Font.Style = [fsBold]
+    ParentColor = False
     ParentFont = False
   end
   object CBKode: TComboBox
@@ -40,6 +41,7 @@ object Form1: TForm1
     Top = 88
     Width = 67
     Caption = 'Kode Barang'
+    ParentColor = False
   end
   object Label3: TLabel
     Left = 64
@@ -47,6 +49,7 @@ object Form1: TForm1
     Top = 120
     Width = 46
     Caption = 'Quantity'
+    ParentColor = False
   end
   object EQTY: TEdit
     Left = 160
@@ -61,6 +64,7 @@ object Form1: TForm1
     Top = 152
     Width = 72
     Caption = 'Nama Barang'
+    ParentColor = False
     OnClick = Label4Click
   end
   object ENama: TEdit
@@ -76,6 +80,7 @@ object Form1: TForm1
     Top = 184
     Width = 71
     Caption = 'Harga Satuan'
+    ParentColor = False
   end
   object EHarga: TEdit
     Left = 160
@@ -97,6 +102,7 @@ object Form1: TForm1
     Top = 216
     Width = 48
     Caption = 'Sub Total'
+    ParentColor = False
   end
   object Label7: TLabel
     Left = 64
@@ -104,6 +110,7 @@ object Form1: TForm1
     Top = 248
     Width = 36
     Caption = 'Diskon'
+    ParentColor = False
   end
   object EDiskon: TEdit
     Left = 160
@@ -153,5 +160,6 @@ object Form1: TForm1
     Top = 280
     Width = 57
     Caption = 'Total Bayar'
+    ParentColor = False
   end
 end
